# droid

./: .gitignore  Procfile  code.sh  config.env.sample  init.sh  pyproject.toml  requirements.txt  start.ps1  start.sh  vscode_poetry.py
.github/: dependabot.yml
.github/workflows/: code-formatter.yml  on_push.yml
droid/: __init__.py  config.py  decor.py  log.py  main.py  utils.py
droid/core/: __init__.py  base_decorator.py  bot.py  clientmod.py  command_context.py  conversation.py  http.py  loader.py  pyrogram_bot.py
droid/modules/: anti_arab.py  chash.py  eval.py  hello_world.py  ping.py  term.py  youtube.py
emoji_captcha/: config.py  decorator.py  log.py  main.py  mod.py  utils.py
emoji_captcha/core/: base_decorator.py  bot.py  command_context.py  emojipedia.py  loader.py  pyrogram_bot.py
emoji_captcha/modules/: hello_world.py  ping.py  youtube.py
scripts/: gen_session.py  vscode_poetry.py
tests/: test_droid.py  test_emoji_captcha.py
