[tool.poetry]
name = "droid"
version = "0.1.0"
description = ""
authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
iytdl = "^0.3.1"
aiorun = "^2021.8.1"
uvloop = {version = "^0.16.0", platform = "linux"}
ujson = "^4.1.0"
Pyrogram = "^1.2.9"
TgCrypto = "^1.2.2"
python-dotenv = "^0.19.0"
ImageHash = "^4.2.1"
Pillow = "^8.3.1"
PyYAML = "^5.4.1"
meval = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.5.7"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
