[tool.poetry]
name = "droid"
version = "0.1.0"
description = ""
authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiorun = "^2021.8.1"
uvloop = {version = "^0.16.0", platform = "linux"}
ujson = "^4.1.0"
TgCrypto = "^1.2.2"
python-dotenv = "^0.19.0"
Pillow = "^8.3.1"
PyYAML = "^5.4.1"
meval = "^2.5"
aiohttp = "^3.7.4"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.7"}
iytdl = "^0.5.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.5.7"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.11b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
